--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-uglify": "6.0.2",
-    "typescript": "3.3.3333",
+    "typescript": "^4.7.4",
     "@types/react": "^16.3.0"
   },
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": "^18.2.0"
   },
   "dependencies": {
     "smooth-dnd": "0.12.1",
